--- a/promociones.html
+++ b/promociones.html
@@ -15,6 +15,7 @@
             height: 100%;
         }
 
+        /* Estilo del botón de inicio, sobre las imágenes */
         .inicio-button {
             position: fixed;
             top: 10px;
@@ -26,7 +27,7 @@
             font-size: 16px;
             border-radius: 5px;
             cursor: pointer;
-            z-index: 1000;
+            z-index: 1000; /* Hace que el botón esté encima de las imágenes */
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
         }
 
@@ -34,22 +35,23 @@
             background-color: #e67e22;
         }
 
+        /* Contenedor de las imágenes de la presentación */
         .slideshow-container {
             position: relative;
-            max-width: 100%;
-            margin: auto;
-            height: 100%;
+            width: 100%;
+            height: 100vh; /* Hace que el contenedor ocupe toda la altura de la pantalla */
+            overflow: hidden; /* Evita que las imágenes se desborden */
         }
 
         .slide {
             display: none;
         }
 
+        /* Las imágenes deben ocupar toda la pantalla, sin perder su proporción */
         .promo-image {
             width: 100%;
-            height: auto;
-            max-height: 100vh;  /* Asegura que las imágenes no se sobrepasen en la altura de la ventana */
-            object-fit: cover;  /* Mantiene la proporción de la imagen y la ajusta al contenedor */
+            height: 100vh;  /* Hace que la imagen ocupe toda la pantalla */
+            object-fit: cover;  /* Ajusta la imagen al tamaño del contenedor sin deformarla */
         }
     </style>
 </head>
@@ -75,6 +77,7 @@
 
     <script>
         let slideIndex = 0;
+
         function showSlides() {
             const slides = document.querySelectorAll(".slide");
             slides.forEach(slide => (slide.style.display = "none"));
@@ -84,16 +87,6 @@
             setTimeout(showSlides, 4000); // Cambiar cada 4 segundos
         }
         showSlides();
-
-        // Activar pantalla completa al cargar la página
-        window.onload = function() {
-            const doc = document.documentElement;
-            if (!document.fullscreenElement) {
-                doc.requestFullscreen().catch(err => {
-                    console.error(`Error attempting to enable fullscreen mode: ${err.message}`);
-                });
-            }
-        };
     </script>
 </body>
 </html>
