--- a/menu-ruso.html
+++ b/menu-ruso.html
@@ -65,8 +65,8 @@
         </div>
         
         <div class="buttons-container">
-            <button class="home-button" onclick="window.location.href='index.html'">ГЛАВНАЯ</button>
-            <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">АКЦИИ</button>
+            <button class="home-button" onclick="window.location.href='index.html'">ГЛАВНАЯ (Inicio)</button>
+            <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">АКЦИИ(Promociones)</button>
         </div>
 
         <div class="pizza-title">ПИЦЦЫ</div>
