--- a/index.html
+++ b/index.html
@@ -1,62 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.2">
-    <title>Big Pizza</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Promociones</title>
     <link rel="stylesheet" href="styles.css">
+
     <style>
-        .fullscreen-button {
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #050505;
+            height: 100%;
+            font-size: 1.2em; /* Aumenta un 20% el tamaño del texto */
+        }
+
+        /* Estilo del botón de inicio, sobre las imágenes */
+        .inicio-button {
             position: fixed;
             top: 10px;
-            right: 10px;
-            padding: 10px 20px;
-            background-color: #f39c12;
+            left: 10px;
+            background-color: orange;
             color: white;
             border: none;
+            padding: 12px 24px; /* Aumento el tamaño del padding */
+            font-size: 19px; /* Aumento el tamaño del texto en el botón */
             border-radius: 5px;
             cursor: pointer;
-            z-index: 1000;
+            z-index: 1000; /* Hace que el botón esté encima de las imágenes */
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        .inicio-button:hover {
+            background-color: #e67e22;
+        }
+
+        /* Contenedor de las imágenes de la presentación */
+        .slideshow-container {
+            position: relative;
+            width: 100%;
+            height: 100vh; /* Hace que el contenedor ocupe toda la altura de la pantalla */
+            overflow: hidden; /* Evita que las imágenes se desborden */
+        }
+
+        .slide {
+            display: none;
+        }
+
+        /* Las imágenes deben ocupar toda la pantalla, sin perder su proporción */
+        .promo-image {
+            width: 100%;
+            height: 100vh;  /* Hace que la imagen ocupe toda la pantalla */
+            object-fit: cover;  /* Ajusta la imagen al tamaño del contenedor sin deformarla */
         }
     </style>
 </head>
 <body>
-    <div class="main-container">
-        <!-- Contenedor del logo -->
-        <div class="logo-container">
-            <img src="logo.png" alt="Big Pizza Logo" class="logo">
-        </div>
+    <!-- Botón para regresar al inicio -->
+    <button class="inicio-button" onclick="window.location.href='index.html'">Inicio</button>
 
-        <!-- Contenedor de botones -->
-        <div class="button-container">
-            <button class="promo-button" onclick="goToPage('promociones.html')">PROMOCIONES</button>
-            <button class="menu-button" onclick="goToPage('menu-espanol.html')">MENÚ EN ESPAÑOL</button>
-            <button class="menu-button" onclick="goToPage('menu-portugues.html')">MENÚ EM PORTUGUÊS</button>
-            <button class="menu-button" onclick="goToPage('menu-ingles.html')">MENU IN ENGLISH</button>
-            <button class="menu-button" onclick="goToPage('menu-ruso.html')">МЕНЮ НА РУССКОМ</button>
+    <!-- Contenedor de la presentación de imágenes -->
+    <div class="slideshow-container">
+        <div class="slide fade">
+            <img src="promo1.jpg" alt="Promoción 1" class="promo-image">
+        </div>
+        <div class="slide fade">
+            <img src="promo2.jpg" alt="Promoción 2" class="promo-image">
+        </div>
+        <div class="slide fade">
+            <img src="promo3.jpg" alt="Promoción 3" class="promo-image">
+        </div>
+        <div class="slide fade">
+            <img src="promo4.jpg" alt="Promoción 4" class="promo-image">
         </div>
     </div>
 
-    <!-- Botón de pantalla completa -->
-    <button class="fullscreen-button" onclick="toggleFullscreen()">Pantalla Completa</button>
-
     <script>
-        function toggleFullscreen() {
-            const doc = document.documentElement;
-            if (!document.fullscreenElement) {
-                doc.requestFullscreen().catch(err => {
-                    console.error(`Error attempting to enable fullscreen mode: ${err.message}`);
-                });
-            } else {
-                document.exitFullscreen();
-            }
-        }
+        let slideIndex = 0;
 
-        // Función para redirigir a una página
-        function goToPage(url) {
-            // Redirigir a la página deseada
-            window.location.href = url;
+        function showSlides() {
+            const slides = document.querySelectorAll(".slide");
+            slides.forEach(slide => (slide.style.display = "none"));
+            slideIndex++;
+            if (slideIndex > slides.length) slideIndex = 1;
+            slides[slideIndex - 1].style.display = "block";
+            setTimeout(showSlides, 4000); // Cambiar cada 4 segundos
         }
+        showSlides();
     </script>
 </body>
 </html>
