--- a/menu-portugues.html
+++ b/menu-portugues.html
@@ -66,7 +66,7 @@
         
         <div class="buttons-container">
             <button class="home-button" onclick="window.location.href='index.html'">INÍCIO</button>
-            <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">PROMOÇÕES</button>
+            <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">PROMOÇÕES (Promociones)</button>
         </div>
 
         <div class="pizza-title">PIZZAS</div>
