--- a/index.html
+++ b/index.html
@@ -1,93 +1,102 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promociones</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Corregido para evitar zoom -->
+    <title>Big Pizza</title>
     <link rel="stylesheet" href="styles.css">
-
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #050505;
-            height: 100%;
-            font-size: 1.2em; /* Aumenta un 20% el tamaño del texto */
+            background-color: #f4f4f4;
+            font-size: 1.2em; /* Aumenta el tamaño de los textos en un 20% */
         }
 
-        /* Estilo del botón de inicio, sobre las imágenes */
-        .inicio-button {
-            position: fixed;
-            top: 10px;
-            left: 10px;
-            background-color: orange;
+        /* Estilo para los botones */
+        .button-container {
+            text-align: center;
+            margin-top: 100px;
+        }
+
+        .promo-button, .menu-button {
+            font-size: 20px; /* Aumento el tamaño del texto en los botones */
+            padding: 16px 32px; /* Aumento el tamaño del padding en los botones */
+            margin: 10px;
+            background-color: #f39c12;
             color: white;
             border: none;
-            padding: 12px 24px; /* Aumento el tamaño del padding */
-            font-size: 19px; /* Aumento el tamaño del texto en el botón */
             border-radius: 5px;
             cursor: pointer;
-            z-index: 1000; /* Hace que el botón esté encima de las imágenes */
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s;
         }
 
-        .inicio-button:hover {
+        .promo-button:hover, .menu-button:hover {
             background-color: #e67e22;
         }
 
-        /* Contenedor de las imágenes de la presentación */
-        .slideshow-container {
-            position: relative;
-            width: 100%;
-            height: 100vh; /* Hace que el contenedor ocupe toda la altura de la pantalla */
-            overflow: hidden; /* Evita que las imágenes se desborden */
+        /* Estilo para el contenedor del logo */
+        .logo-container {
+            text-align: center;
+            margin-top: 50px;
         }
 
-        .slide {
-            display: none;
+        .logo {
+            width: 200px;
         }
 
-        /* Las imágenes deben ocupar toda la pantalla, sin perder su proporción */
-        .promo-image {
-            width: 100%;
-            height: 100vh;  /* Hace que la imagen ocupe toda la pantalla */
-            object-fit: cover;  /* Ajusta la imagen al tamaño del contenedor sin deformarla */
+        /* Botón de pantalla completa */
+        .fullscreen-button {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 12px 24px; /* Aumento el tamaño del padding */
+            background-color: #f39c12;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 1000;
+            font-size: 18px; /* Aumento el tamaño del texto */
+        }
+
+        .fullscreen-button:hover {
+            background-color: #e67e22;
         }
     </style>
 </head>
 <body>
-    <!-- Botón para regresar al inicio -->
-    <button class="inicio-button" onclick="window.location.href='index.html'">Inicio</button>
+    <div class="main-container">
+        <!-- Contenedor del logo -->
+        <div class="logo-container">
+            <img src="logo.png" alt="Big Pizza Logo" class="logo">
+        </div>
 
-    <!-- Contenedor de la presentación de imágenes -->
-    <div class="slideshow-container">
-        <div class="slide fade">
-            <img src="promo1.jpg" alt="Promoción 1" class="promo-image">
-        </div>
-        <div class="slide fade">
-            <img src="promo2.jpg" alt="Promoción 2" class="promo-image">
-        </div>
-        <div class="slide fade">
-            <img src="promo3.jpg" alt="Promoción 3" class="promo-image">
-        </div>
-        <div class="slide fade">
-            <img src="promo4.jpg" alt="Promoción 4" class="promo-image">
+        <!-- Contenedor de botones -->
+        <div class="button-container">
+            <button class="promo-button" onclick="window.location.href='promociones.html'">PROMOCIONES</button>
+            <button class="menu-button" onclick="window.location.href='menu-espanol.html'">MENÚ EN ESPAÑOL</button>
+            <button class="menu-button" onclick="window.location.href='menu-portugues.html'">MENÚ EM PORTUGUÊS</button>
+            <button class="menu-button" onclick="window.location.href='menu-ingles.html'">MENU IN ENGLISH</button>
+            <button class="menu-button" onclick="window.location.href='menu-ruso.html'">МЕНЮ НА РУССКОМ</button>
         </div>
     </div>
 
-    <script>
-        let slideIndex = 0;
+    <!-- Botón de pantalla completa -->
+    <button class="fullscreen-button" onclick="toggleFullscreen()">Pantalla Completa</button>
 
-        function showSlides() {
-            const slides = document.querySelectorAll(".slide");
-            slides.forEach(slide => (slide.style.display = "none"));
-            slideIndex++;
-            if (slideIndex > slides.length) slideIndex = 1;
-            slides[slideIndex - 1].style.display = "block";
-            setTimeout(showSlides, 4000); // Cambiar cada 4 segundos
+    <script>
+        function toggleFullscreen() {
+            const doc = document.documentElement;
+            if (!document.fullscreenElement) {
+                doc.requestFullscreen().catch(err => {
+                    console.error(`Error attempting to enable fullscreen mode: ${err.message}`);
+                });
+            } else {
+                document.exitFullscreen();
+            }
         }
-        showSlides();
     </script>
 </body>
 </html>
