--- a/menu-portugues.html
+++ b/menu-portugues.html
@@ -95,14 +95,14 @@
                     <h2>PIZZAS ESPECIAIS (Grande ou Individual) </h2>
                     <ul class="no-bullets" style="font-size: 25px;">
                         <li>Mussarela <span class="translation">(Mozzarella)</span></li>
-                        <li>Cebola <span class="translation">(Cebolla)</span></li>
+                        <li>Cebola <span class="translation">(Fugazzeta)</span></li>
                         <li>Presunto e Pimentão <span class="translation">(Jamón y Morron)</span></li>
                         <li>Cheddar e Bacon <span class="translation">(Cheddar y Bacon)</span></li>
-                        <li>Napolitana com Presunto (Tomate e Alho) <span class="translation">(Napolitana con jamón)</span></li>
+                        <li>Napolitana com Presunto (Tomate, Presunto e Alho) <span class="translation">(Napolitana con jamón)</span></li>
                         <li>Calabresa <span class="translation">(Calabresa)</span></li>
                         <li>Presunto com Pimentão e Ovo <span class="translation">(Jamón con Morron y huevo)</span></li>
                         <li>Cebola com Presunto <span class="translation">(Fugazzeta con jamón)</span></li>
-                        <li>Presunto com Pimentão <span class="translation">(Jamón con Morron)</span></li>
+                        <li>Napolitana (Tomate e Alho) <span class="translation">(Napolitana)</span></li>
                     </ul>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                         <li>Presunto <span class="translation">(Jamón)</span></li>
                         <li>Calabresa <span class="translation">(Longaniza)</span></li>
                         <li>Cheddar <span class="translation">(Cheddar)</span></li>
-                        <li>Bacon <span class="translation">(Tocino)</span></li>
+                        <li>Bacon <span class="translation">(Panceta)</span></li>
                     </ul>
                 </div>
             </div>
@@ -168,6 +168,26 @@
                 <h4>MILHO</h4>
                 <span class="translation">(Humita)</span>
                 <img src="images/empanada8.jpg" alt="Empanada de Milho">
+            </div>
+            <div class="empanada-item">
+                <h4>CEBOLA E QUEIJO</h4>
+                <span class="translation">(Cebolla y Queso)</span>
+                <img src="images/empanada9.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>VEGETAL</h4>
+                <span class="translation">(Verdura)</span>
+                <img src="images/empanada12.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>ROQUEFORT E PRESUNTO</h4>
+                <span class="translation">(Roquefort)</span>
+                <img src="images/empanada11.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>BROCCOLIS E COGUMELOS</h4>
+                <span class="translation">(Brocoli y Champiñones)</span>
+                <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
         </div>
     </div>
