--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -83,11 +83,11 @@
                         <li>Fugazzeta</li>
                         <li>Jamón Y Morrón</li>
                         <li>Cheddar y Bacon</li>
-                        <li>Napolitana con Jamón (tomate y ajo)</li>
+                        <li>Napolitana con Jamón (tomate,jamon y aderezo de ajo)</li>
                         <li>Calabresa</li>
                         <li>Jamón con Morrón y Huevo</li>
                         <li>Fugazzetta con Jamón</li>
-                        <li>Jamón con Morron</li>
+                        <li>Napolitana(Tomate y aderezo de ajo)</li>
                     </ul>
                 </div>
             </div>
@@ -146,6 +146,22 @@
             <div class="empanada-item">
                 <h4>HUMITA</h4>
                 <img src="images/empanada8.jpg" alt="Empanada Humita">
+            </div>
+            <div class="empanada-item">
+                <h4>CEBOLLA Y QUESO</h4>
+                <img src="images/empanada9.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>VERDURA</h4>
+                <img src="images/empanada12.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>ROQUEFORT Y JAMON</h4>
+                <img src="images/empanada11.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>BROCOLI Y CHAMPIÑONES</h4>
+                <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
         </div>
     </div>
