--- a/menu-ingles.html
+++ b/menu-ingles.html
@@ -95,14 +95,14 @@
                     <h2>SPECIAL PIZZAS (Large or Individual) </h2>
                     <ul class="no-bullets" style="font-size: 25px;">
                         <li>Mozzarella <span class="translation">(Mozzarella)</span></li>
-                        <li>Onion <span class="translation">(Cebolla)</span></li>
+                        <li>Onion <span class="translation">(Fugazzeta)</span></li>
                         <li>Ham and Bell Pepper <span class="translation">(Jamón y Morron)</span></li>
                         <li>Cheddar and Bacon <span class="translation">(Cheddar y Bacon)</span></li>
                         <li>Napolitana with Ham (tomato and garlic) <span class="translation">(Napolitana con jamón)</span></li>
                         <li>Peperoni <span class="translation">(Calabresa)</span></li>
                         <li>Ham with Bell Pepper and Egg <span class="translation">(Jamón con Morron y huevo)</span></li>
                         <li>Onion with Ham <span class="translation">(Fugazzeta con jamón)</span></li>
-                        <li>Ham with Bell Pepper <span class="translation">(Jamón con Morron)</span></li>
+                        <li>Napolitana (tomato and garlic) <span class="translation">(Napolitana)</span></li>
                     </ul>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                         <li>Ham <span class="translation">(Jamón)</span></li>
                         <li>Peperoni <span class="translation">(Longaniza)</span></li>
                         <li>Cheddar <span class="translation">(Cheddar)</span></li>
-                        <li>Bacon <span class="translation">(Tocino)</span></li>
+                        <li>Bacon <span class="translation">(Panceta)</span></li>
                     </ul>
                 </div>
             </div>
@@ -168,6 +168,26 @@
                 <h4>CORN</h4>
                 <span class="translation">(Humita)</span>
                 <img src="images/empanada8.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>Onion and Cheese</h4>
+                <span class="translation">(Cebolla y Queso)</span>
+                <img src="images/empanada9.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>VEGETABLE</h4>
+                <span class="translation">(Verdura)</span>
+                <img src="images/empanada12.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>ROQUEFORT AND HAM</h4>
+                <span class="translation">(Roquefort)</span>
+                <img src="images/empanada11.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>BROCCOLI AND MUSHROOMS</h4>
+                <span class="translation">(Brocoli y Champiñones)</span>
+                <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
         </div>
     </div>
