--- a/menu-ruso.html
+++ b/menu-ruso.html
@@ -95,14 +95,14 @@
                     <h2>ОСОБЫЕ ПИЦЦЫ (Большие или индивидуальные) </h2>
                     <ul class="no-bullets" style="font-size: 25px;">
                         <li>Моцарелла <span class="translation">(Mozzarella)</span></li>
-                        <li>Лук <span class="translation">(Cebolla)</span></li>
+                        <li>Лук <span class="translation">(Fugazzeta)</span></li>
                         <li>Ветчина и перец <span class="translation">(Jamón y Morron)</span></li>
                         <li>Чеддер и бекон <span class="translation">(Cheddar y Bacon)</span></li>
                         <li>Неаполитанская с ветчиной (Томаты и чеснок) <span class="translation">(Napolitana con jamón)</span></li>
                         <li>Колбаса <span class="translation">(Calabresa)</span></li>
                         <li>Ветчина с перцем и яйцом <span class="translation">(Jamón con Morron y huevo)</span></li>
                         <li>Лук с ветчиной <span class="translation">(Fugazzeta con jamón)</span></li>
-                        <li>Ветчина с перцем <span class="translation">(Jamón con Morron)</span></li>
+                        <li>Неаполитанская (Томаты) <span class="translation">(Napolitana)</span></li>
                     </ul>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                         <li>Ветчина <span class="translation">(Jamón)</span></li>
                         <li>Колбаса <span class="translation">(Longaniza)</span></li>
                         <li>Чеддер <span class="translation">(Cheddar)</span></li>
-                        <li>Бекон <span class="translation">(Tocino)</span></li>
+                        <li>Бекон <span class="translation">(Panceta)</span></li>
                     </ul>
                 </div>
             </div>
@@ -168,6 +168,26 @@
                 <h4>КУКУРУЗА</h4>
                 <span class="translation">(Humita)</span>
                 <img src="images/empanada8.jpg" alt="Эмпанада с кукурузой">
+            </div>
+            <div class="empanada-item">
+                <h4>Лук и сыр</h4>
+                <span class="translation">(Cebolla y Queso)</span>
+                <img src="images/empanada9.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>ОВОЩИ</h4>
+                <span class="translation">(Verdura)</span>
+                <img src="images/empanada12.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>РОКФОР И ВЕТЧИНА</h4>
+                <span class="translation">(Roquefort)</span>
+                <img src="images/empanada11.jpg" alt="Corn Empanada">
+            </div>
+            <div class="empanada-item">
+                <h4>БРОККОЛИ И ГРИБЫ</h4>
+                <span class="translation">(Brocoli y Champiñones)</span>
+                <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
         </div>
     </div>
